<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tefah.neverforget.AddTaskActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_report_image"
                android:contentDescription="@string/image_note"/>

            <LinearLayout
                android:id="@+id/player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#f1f1f1"
                android:orientation="vertical"
                android:elevation="4dp">
                <EditText
                    android:id="@+id/writtenNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageNote"
                    android:padding="@dimen/xxmargin"
                    android:hint="@string/write_note_edit_text"
                    android:layout_marginBottom="@dimen/margin"
                    />
                <ImageButton
                    android:id="@+id/voiceNotePlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_media_play"/>

            </LinearLayout>
            <Button
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/player"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/xmargin"
                android:text="@string/done" />
            <Button
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/done"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/delete"
                android:layout_margin="@dimen/xmargin"
                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/voiceNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp"
        android:src="@android:drawable/ic_btn_speak_now"
        app:fabSize="mini"
        android:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/make_voice_note_button"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/photoNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:src="@android:drawable/ic_menu_camera"
        app:fabSize="mini"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/make_photo_note_button"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/writeNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:elevation="@dimen/fab_elevation"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        android:src="@android:drawable/ic_menu_edit"
        app:fabSize="mini"
        android:layout_gravity="center|bottom"
        android:contentDescription="@string/write_note_button"
        />
</FrameLayout>
